; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_gimplify.c_gimplify_variable_sized_compare.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_gimplify.c_gimplify_variable_sized_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@implicit_built_in_decls = common dso_local global i32** null, align 8
@BUILT_IN_MEMCMP = common dso_local global i64 0, align 8
@integer_zero_node = common dso_local global i32 0, align 4
@GS_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**)* @gimplify_variable_sized_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gimplify_variable_sized_compare(i32** %0) #0 {
  %2 = alloca i32**, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32** %0, i32*** %2, align 8
  %8 = load i32**, i32*** %2, align 8
  %9 = load i32*, i32** %8, align 8
  %10 = call i32* @TREE_OPERAND(i32* %9, i32 0)
  store i32* %10, i32** %3, align 8
  %11 = load i32**, i32*** %2, align 8
  %12 = load i32*, i32** %11, align 8
  %13 = call i32* @TREE_OPERAND(i32* %12, i32 1)
  store i32* %13, i32** %4, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @TREE_TYPE(i32* %14)
  %16 = call i32* @TYPE_SIZE_UNIT(i32 %15)
  store i32* %16, i32** %6, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = call i32* @unshare_expr(i32* %17)
  store i32* %18, i32** %6, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = load i32*, i32** %3, align 8
  %21 = call i32* @SUBSTITUTE_PLACEHOLDER_IN_EXPR(i32* %19, i32* %20)
  store i32* %21, i32** %6, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = call i32* @tree_cons(i32* null, i32* %22, i32* null)
  store i32* %23, i32** %5, align 8
  %24 = load i32*, i32** %4, align 8
  %25 = call i32* @build_fold_addr_expr(i32* %24)
  store i32* %25, i32** %6, align 8
  %26 = load i32*, i32** %6, align 8
  %27 = load i32*, i32** %5, align 8
  %28 = call i32* @tree_cons(i32* null, i32* %26, i32* %27)
  store i32* %28, i32** %5, align 8
  %29 = load i32*, i32** %3, align 8
  %30 = call i32* @build_fold_addr_expr(i32* %29)
  store i32* %30, i32** %7, align 8
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %5, align 8
  %33 = call i32* @tree_cons(i32* null, i32* %31, i32* %32)
  store i32* %33, i32** %5, align 8
  %34 = load i32**, i32*** @implicit_built_in_decls, align 8
  %35 = load i64, i64* @BUILT_IN_MEMCMP, align 8
  %36 = getelementptr inbounds i32*, i32** %34, i64 %35
  %37 = load i32*, i32** %36, align 8
  store i32* %37, i32** %6, align 8
  %38 = load i32*, i32** %6, align 8
  %39 = load i32*, i32** %5, align 8
  %40 = call i32* @build_function_call_expr(i32* %38, i32* %39)
  store i32* %40, i32** %6, align 8
  %41 = load i32**, i32*** %2, align 8
  %42 = load i32*, i32** %41, align 8
  %43 = call i32 @TREE_CODE(i32* %42)
  %44 = load i32**, i32*** %2, align 8
  %45 = load i32*, i32** %44, align 8
  %46 = call i32 @TREE_TYPE(i32* %45)
  %47 = load i32*, i32** %6, align 8
  %48 = load i32, i32* @integer_zero_node, align 4
  %49 = call i32* @build2(i32 %43, i32 %46, i32* %47, i32 %48)
  %50 = load i32**, i32*** %2, align 8
  store i32* %49, i32** %50, align 8
  %51 = load i32, i32* @GS_OK, align 4
  ret i32 %51
}

declare dso_local i32* @TREE_OPERAND(i32*, i32) #1

declare dso_local i32* @TYPE_SIZE_UNIT(i32) #1

declare dso_local i32 @TREE_TYPE(i32*) #1

declare dso_local i32* @unshare_expr(i32*) #1

declare dso_local i32* @SUBSTITUTE_PLACEHOLDER_IN_EXPR(i32*, i32*) #1

declare dso_local i32* @tree_cons(i32*, i32*, i32*) #1

declare dso_local i32* @build_fold_addr_expr(i32*) #1

declare dso_local i32* @build_function_call_expr(i32*, i32*) #1

declare dso_local i32* @build2(i32, i32, i32*, i32) #1

declare dso_local i32 @TREE_CODE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
